--- a/public/less/document.less
+++ b/public/less/document.less
@@ -120,6 +120,16 @@ ul.social {
 	text-shadow: 0 -1px rgba(0, 0, 0, 0.3);
 }
 
+.highlight {
+	-webkit-box-shadow:5px 5px 5px black; 
+	-moz-box-shadow: 5px 5px 5px black; 
+	box-shadow:5px 5px 5px black; 
+	-webkit-box-shadow:0 0 15px red; 
+	-moz-box-shadow: 0 0 15px red; 
+	box-shadow:0 0 15px red; 
+	border-color: red;
+ } 
+
 /* Browse Happy */
 /* ------------------------------------------------------------------------------------ */
 
