minor css changes for mobile

--- a/public/less/cart.less
+++ b/public/less/cart.less
@@ -248,6 +248,10 @@ label {
 	padding-right: 0.5em;
 }
 
+.shipping select {
+  width: 100%;
+}
+
 .empty-cart {
   text-align: center;
   font-size: 1.2em;
