--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -409,8 +409,9 @@ ul.social:after {
 }
 .social li.cart {
   border-left: 1px solid #ccc;
-  margin-left: 1.3em;
-  padding-left: 0.8em;
+  margin-left: 0;
+  padding-left: 0.3em;
+  margin-right: 0;
 }
 .cart .cart-quantity {
   position: relative;
@@ -1389,6 +1390,9 @@ label {
 .shipping span {
   text-align: left;
   padding-right: 0.5em;
+}
+.shipping select {
+  width: 100%;
 }
 .empty-cart {
   text-align: center;
