--- a/public/less/document.less
+++ b/public/less/document.less
@@ -65,8 +65,9 @@ ul.social {
 
 .social li.cart {
 	border-left: 1px solid #ccc;
-	margin-left: 1.3em;
-	padding-left: 0.8em;
+	margin-left: 0;
+	padding-left: 0.3em;
+	margin-right: 0;
 }
 
 .cart .cart-quantity {
