--- a/public/less/details.less
+++ b/public/less/details.less
@@ -83,6 +83,18 @@ ul.tags {
 	color: #fff;
 }
 
+ul.palette {
+	.clearfix();
+	margin-bottom: 20px;
+}
+
+.palette .color {
+	float: left;
+	width: 2em;
+	height: 1.25em;
+}
+
+
 .sale,
 .buy-options {
 	margin-top: 20px;
