--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -55,3 +55,25 @@ ul#tmbs {
 	position: relative;
 	-ms-interpolation-mode: bicubic;
 }
+
+.column,
+.column a {
+	position: relative;
+}
+
+.column a {
+	display: block;
+}
+
+.num {
+	position: absolute;
+	font-size: 0.8em;
+	font-style: italic;
+	top: 0;
+	left: 0;
+	background: #222;
+	color: #fff;
+	padding: 0.5em;
+	z-index: 1;
+	.opacity(0.9);
+}
