--- a/public/less/methods.less
+++ b/public/less/methods.less
@@ -17,3 +17,11 @@
 	-moz-opacity: @opacity;
 	opacity: @opacity;
 }
+
+.transition(@duration:0.2s, @ease:ease-out) {
+  -webkit-transition: all @duration @ease;
+  -moz-transition: all @duration @ease;
+  -o-transition: all @duration @ease;
+  -ms-transition: all @duration @ease;
+  transition: all @duration @ease;
+}
