--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -66,7 +66,7 @@ ul#tmbs {
 	display: block;
 }
 
-.title {
+.column .title {
 	position: absolute;
 	font-size: 1em;
 	font-style: italic;
@@ -83,13 +83,13 @@ ul#tmbs {
 	z-index: 1;
 }
 
-.title div {
+.column .title div {
 	display: inline-block;
 	padding: 1em;
 	margin: 0 auto;
 }
 
-.title span.num {
+.column .title span.num {
 	color: @linkColor;
 }
 
