--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -479,6 +479,49 @@ ul.social:after {
   box-shadow: 0 0 15px red;
   border-color: red;
 }
+.signup {
+  width: 560px;
+  margin: 3em auto 2em auto;
+}
+.signup:before,
+.signup:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */
+}
+.signup:after {
+  clear: both;
+}
+.mc-field-group input.email {
+  width: 75%;
+  padding: 5px 8px;
+  display: inline-block;
+  border: none;
+  line-height: 32px;
+  color: #333;
+  background: #ececec;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+.mc-field-group input.subscribe {
+  padding: 6px 12px;
+  line-height: 26px;
+  border: 1px solid transparent;
+  display: inline-block;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  background: #3ca03d;
+  color: #fff;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+.mc-field-group input.subscribe:hover {
+  background: #43b344;
+}
 /* Browse Happy */
 /* ------------------------------------------------------------------------------------ */
 .browsehappy {
@@ -976,6 +1019,12 @@ td.print-price {
   ul.social {
     font-size: 1em;
   }
+  .signup {
+    width: 100%;
+  }
+  .mc-field-group input.email {
+    width: 66%;
+  }
 }
 @media only screen and (min-width: 320px) and (max-width: 510px) {
   header {
@@ -1024,6 +1073,12 @@ td.print-price {
   .details .date {
     margin: 20px 0 10px;
   }
+  .signup {
+    width: 100%;
+  }
+  .mc-field-group input.email {
+    width: 66%;
+  }
 }
 @media only screen and (min-width: 510px) and (max-width: 600px) {
   header {
@@ -1049,6 +1104,12 @@ td.print-price {
   .grid2.detail-col.details {
     margin-top: 20px;
     padding-left: 0;
+  }
+  .signup {
+    width: 100%;
+  }
+  .mc-field-group input.email {
+    width: 66%;
   }
 }
 @media only screen and (min-width: 560px) {
