--- a/public/less/document.less
+++ b/public/less/document.less
@@ -130,6 +130,46 @@ ul.social {
 	border-color: red;
  } 
 
+.signup {
+	width: 560px;
+ 	margin: 3em auto 2em auto;
+ 	.clearfix();
+ }
+
+.mc-field-group input.email {
+	width: 75%;
+	padding: 5px 8px;
+
+	display: inline-block;
+	border: none;
+	line-height: 32px;
+	color: #333;
+	// padding: 7px 8px 8px;
+	// margin: 0 0 10px;
+	background: #ececec;
+
+	.rounded(4px);
+}
+
+.mc-field-group input.subscribe {
+	//width: 20%;
+	padding: 6px 12px;
+	line-height: 26px;
+	border: 1px solid transparent;
+	display: inline-block;
+	text-align: center;
+	cursor: pointer;
+	white-space: nowrap;
+	background: @linkColor;
+	color: #fff;
+
+	.rounded(4px);
+}
+
+.mc-field-group input.subscribe:hover {
+	background: lighten(@linkColor, 5%);
+}
+
 /* Browse Happy */
 /* ------------------------------------------------------------------------------------ */
 
