--- a/public/less/media.less
+++ b/public/less/media.less
@@ -8,6 +8,14 @@
 	header h1, ul.social {
 		font-size: 1em;
 	}
+
+	.signup {
+		width: 100%;
+	}
+
+	.mc-field-group input.email {
+		width: 66%;
+	}
 }
 
 @media only screen and (min-width: 320px) and (max-width: 510px) {
@@ -71,6 +79,14 @@
 		margin:20px 0 10px;
 	}
 
+	.signup {
+		width: 100%;
+	}
+
+	.mc-field-group input.email {
+		width: 66%;
+	}
+
 }
 
 // @media only screen and (min-width: 480px) and (orientation:landscape) {
@@ -108,6 +124,14 @@
 	.grid2.detail-col.details {
 		margin-top: 20px;
 		padding-left: 0;
+	}
+
+	.signup {
+		width: 100%;
+	}
+
+	.mc-field-group input.email {
+		width: 66%;
 	}
 }
 
