--- a/public/less/methods.less
+++ b/public/less/methods.less
@@ -25,3 +25,9 @@
   -ms-transition: all @duration @ease;
   transition: all @duration @ease;
 }
+
+.rounded(@radius: 4px) {
+  -webkit-border-radius: @radius;
+  -moz-border-radius: @radius;
+  border-radius: @radius;
+}
