--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1029,6 +1029,13 @@ td.print-price {
     width: 59%;
   }
 }
+@media only screen and (min-width: 320px) {
+  .grid1,
+  .grid2,
+  .grid-first {
+    width: 50%;
+  }
+}
 @media only screen and (min-width: 320px) and (max-width: 510px) {
   header {
     margin-top: 10px;
@@ -1057,11 +1064,6 @@ td.print-price {
   .container {
     padding: 0 20px;
   }
-  .grid1,
-  .grid2,
-  .grid-first {
-    width: 100%;
-  }
   .grid2.detail-col.details {
     margin-top: 20px;
     padding-left: 0;
@@ -1077,7 +1079,7 @@ td.print-price {
     margin: 20px 0 10px;
   }
 }
-@media only screen and (min-width: 510px) and (max-width: 600px) {
+@media only screen and (min-width: 510px) and (max-width: 644px) {
   header {
     margin-top: 10px;
   }
@@ -1110,11 +1112,6 @@ td.print-price {
   }
 }
 @media only screen and (min-width: 560px) {
-  .grid1,
-  .grid2,
-  .grid-first {
-    width: 50%;
-  }
   .grid2.detail-col.details {
     margin-top: 20px;
     padding-left: 0;
