--- a/public/less/media.less
+++ b/public/less/media.less
@@ -18,6 +18,14 @@
 	}
 }
 
+@media only screen and (min-width: 320px) {
+	.grid1,
+	.grid2,
+	.grid-first {
+		width: 50%;
+	}
+}
+
 @media only screen and (min-width: 320px) and (max-width: 510px) {
 
 	header {
@@ -54,11 +62,11 @@
 		padding: 0 20px;
 	}
 
-	.grid1,
-	.grid2,
-	.grid-first {
-		width: 100%;
-	}
+	// .grid1,
+	// .grid2,
+	// .grid-first {
+	// 	width: 50%;
+	// }
 
 	// detail specific
 	.grid2.detail-col.details {
@@ -84,7 +92,7 @@
 
 // }
 
-@media only screen and (min-width: 510px) and (max-width: 600px) {
+@media only screen and (min-width: 510px) and (max-width: 644px) {
 
 	header {
 		margin-top: 10px;
@@ -127,11 +135,11 @@
 }
 
 @media only screen and (min-width: 560px) {
-	.grid1,
-	.grid2,
-	.grid-first {
-		width: 50%;
-	}
+	// .grid1,
+	// .grid2,
+	// .grid-first {
+	// 	width: 50%;
+	// }
 
 	// detail specific
 	.grid2.detail-col.details {
