more media query updates for homepage

--- a/public/less/media.less
+++ b/public/less/media.less
@@ -19,11 +19,7 @@
 }
 
 @media only screen and (min-width: 320px) {
-	.grid1,
-	.grid2,
-	.grid-first {
-		width: 50%;
-	}
+
 }
 
 @media only screen and (min-width: 320px) and (max-width: 510px) {
@@ -62,11 +58,17 @@
 		padding: 0 20px;
 	}
 
-	// .grid1,
-	// .grid2,
-	// .grid-first {
-	// 	width: 50%;
-	// }
+	.grid1,
+	.grid2,
+	.grid-first {
+		width: 100%;
+	}
+
+	#tmbs li.grid1,
+	#tmbs li.grid2,
+	#tmbs li.grid-first {
+		width: 50%;
+	}
 
 	// detail specific
 	.grid2.detail-col.details {
@@ -132,14 +134,20 @@
 	.mc-field-group input.email {
 		width: 66%;
 	}
+
+	#tmbs li.grid1,
+	#tmbs li.grid2,
+	#tmbs li.grid-first {
+		width: 50%;
+	}
 }
 
 @media only screen and (min-width: 560px) {
-	// .grid1,
-	// .grid2,
-	// .grid-first {
-	// 	width: 50%;
-	// }
+	.grid1,
+	.grid2,
+	.grid-first {
+		width: 50%;
+	}
 
 	// detail specific
 	.grid2.detail-col.details {
