--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1029,13 +1029,6 @@ td.print-price {
     width: 59%;
   }
 }
-@media only screen and (min-width: 320px) {
-  .grid1,
-  .grid2,
-  .grid-first {
-    width: 50%;
-  }
-}
 @media only screen and (min-width: 320px) and (max-width: 510px) {
   header {
     margin-top: 10px;
@@ -1063,6 +1056,16 @@ td.print-price {
   }
   .container {
     padding: 0 20px;
+  }
+  .grid1,
+  .grid2,
+  .grid-first {
+    width: 100%;
+  }
+  #tmbs li.grid1,
+  #tmbs li.grid2,
+  #tmbs li.grid-first {
+    width: 50%;
   }
   .grid2.detail-col.details {
     margin-top: 20px;
@@ -1110,8 +1113,18 @@ td.print-price {
   .mc-field-group input.email {
     width: 66%;
   }
+  #tmbs li.grid1,
+  #tmbs li.grid2,
+  #tmbs li.grid-first {
+    width: 50%;
+  }
 }
 @media only screen and (min-width: 560px) {
+  .grid1,
+  .grid2,
+  .grid-first {
+    width: 50%;
+  }
   .grid2.detail-col.details {
     margin-top: 20px;
     padding-left: 0;
