--- a/public/less/media.less
+++ b/public/less/media.less
@@ -12,14 +12,12 @@
 	.signup {
 		width: 100%;
 	}
-
-	.mc-field-group input.email {
-		width: 59%;
-	}
 }
 
 @media only screen and (min-width: 320px) {
-
+	.mc-field-group input.email {
+		width: 59%;
+	}
 }
 
 @media only screen and (min-width: 320px) and (max-width: 510px) {
@@ -87,6 +85,10 @@
 
 	.details .date {
 		margin:20px 0 10px;
+	}
+
+	.signup {
+		width: 100%;
 	}
 }
 
