--- a/public/less/media.less
+++ b/public/less/media.less
@@ -14,11 +14,11 @@
 	}
 }
 
-@media only screen and (min-width: 320px) {
-	.mc-field-group input.email {
-		width: 59%;
-	}
-}
+// @media only screen and (min-width: 320px) {
+// 	.mc-field-group input.email {
+// 		width: 59%;
+// 	}
+// }
 
 @media only screen and (min-width: 320px) and (max-width: 510px) {
 
@@ -89,6 +89,10 @@
 
 	.signup {
 		width: 100%;
+	}
+
+	.mc-field-group input.email {
+		width: 66%;
 	}
 }
 
