--- a/public/less/document.less
+++ b/public/less/document.less
@@ -170,6 +170,14 @@ ul.social {
 	background: lighten(@linkColor, 5%);
 }
 
+.right {
+	float: right !important;
+}
+
+.left {
+	float: left !important;
+}
+
 /* Browse Happy */
 /* ------------------------------------------------------------------------------------ */
 
