--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -97,3 +97,20 @@ ul#tmbs {
 	bottom: 0;
 	.opacity(0.9);
 }
+
+
+.row {
+	.clearfix();
+	
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 0;
+	margin-bottom: 0;
+
+	.row {
+		width: auto;
+		margin: 0;
+		max-width: none;
+	}
+}
