--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1053,6 +1053,9 @@ td.print-price {
   .signup {
     width: 100%;
   }
+  .mc-field-group input.email {
+    width: 59%;
+  }
 }
 @media only screen and (min-width: 320px) and (max-width: 510px) {
   header {
