--- a/public/less/media.less
+++ b/public/less/media.less
@@ -12,6 +12,10 @@
 	.signup {
 		width: 100%;
 	}
+
+	.mc-field-group input.email {
+		width: 59%;
+	}
 }
 
 // @media only screen and (min-width: 320px) {
