hotfix for mobile subscribe %

--- a/public/less/media.less
+++ b/public/less/media.less
@@ -13,16 +13,16 @@
 		width: 100%;
 	}
 
+	// .mc-field-group input.email {
+	// 	width: 59%;
+	// }
+}
+
+@media only screen and (max-width: 509px) {
 	.mc-field-group input.email {
 		width: 59%;
 	}
 }
-
-// @media only screen and (min-width: 320px) {
-// 	.mc-field-group input.email {
-// 		width: 59%;
-// 	}
-// }
 
 @media only screen and (min-width: 320px) and (max-width: 510px) {
 
@@ -96,7 +96,7 @@
 	}
 
 	.mc-field-group input.email {
-		width: 66%;
+		//width: 66%;
 	}
 }
 
