--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1053,6 +1053,8 @@ td.print-price {
   .signup {
     width: 100%;
   }
+}
+@media only screen and (max-width: 509px) {
   .mc-field-group input.email {
     width: 59%;
   }
@@ -1111,9 +1113,6 @@ td.print-price {
   }
   .signup {
     width: 100%;
-  }
-  .mc-field-group input.email {
-    width: 66%;
   }
 }
 @media only screen and (min-width: 510px) and (max-width: 644px) {
