--- a/public/less/document.less
+++ b/public/less/document.less
@@ -48,6 +48,14 @@ footer span {
 	font-family: helvetica, arial, sans-serif;
 }
 
+#global {
+	margin: 0;
+	background: @linkColor;
+	color: #fff;
+	padding: 0.5em 1em;
+	z-index: 3;
+}
+
 ul.social {
 	float: right;
 	padding: 0;
