--- a/public/less/cart.less
+++ b/public/less/cart.less
@@ -189,6 +189,10 @@ label {
   background-color: @linkHoverColor;
 }
 
+.stripe {
+  clear: both;
+}
+
 /* Make adjustments for tablet */
 @media screen and (max-width: 650px) {
   
