button perspective fix

--- a/public/less/details.less
+++ b/public/less/details.less
@@ -152,6 +152,11 @@ td.print-price {
   width: 95px;
   height: 30px;
   text-align: center;
+
+  @media only screen and (max-width: 500px) {
+	perspective: 1000px;
+    -webkit-perspective: 1000px;
+	}
 }
 
 .button .addtocart {
