--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -869,10 +869,12 @@ td.print-price {
   height: 30px;
   text-align: center;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 600px) {
   .button {
-    perspective: 1000px;
-    -webkit-perspective: 1000px;
+    -webkit-perspective: 1000;
+    -moz-perspective: 1000;
+    -ms-perspective: 1000;
+    perspective: 1000;
   }
 }
 .button .addtocart {
