--- a/public/less/details.less
+++ b/public/less/details.less
@@ -153,9 +153,11 @@ td.print-price {
   height: 30px;
   text-align: center;
 
-  @media only screen and (max-width: 500px) {
-	perspective: 1000px;
-    -webkit-perspective: 1000px;
+	@media only screen and (max-width: 600px) {
+		-webkit-perspective: 1000;
+		-moz-perspective: 1000;
+		-ms-perspective: 1000;
+		perspective: 1000;
 	}
 }
 
