--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Gudea:400,700,400italic");
+@import url('https://fonts.googleapis.com/css?family=Gudea:400,700,400italic');
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
@@ -153,7 +153,7 @@ pre {
  * Set consistent quote types.
  */
 q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
+  quotes: '\201C''\201D''\2018''\2019';
 }
 /**
  * Address inconsistent and variable font size in all browsers.
@@ -264,9 +264,9 @@ select {
  *    `input` and others.
  */
 button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+html input[type='button'],
+input[type='reset'],
+input[type='submit'] {
   -webkit-appearance: button;
   /* 2 */
   cursor: pointer;
@@ -283,8 +283,8 @@ html input[disabled] {
  * 1. Address box sizing set to `content-box` in IE 8/9/10.
  * 2. Remove excess padding in IE 8/9/10.
  */
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -295,7 +295,7 @@ input[type="radio"] {
  * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
-input[type="search"] {
+input[type='search'] {
   -webkit-appearance: textfield;
   /* 1 */
   -moz-box-sizing: content-box;
@@ -307,8 +307,8 @@ input[type="search"] {
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 /**
@@ -370,7 +370,7 @@ header {
 }
 header:before,
 header:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -401,7 +401,7 @@ ul.social {
 }
 ul.social:before,
 ul.social:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -435,7 +435,7 @@ ul.social:after {
   color: white;
 }
 .cart-link:hover {
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+  -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=60)';
   filter: alpha(opacity=60);
   -webkit-opacity: 0.6;
   -moz-opacity: 0.6;
@@ -446,7 +446,7 @@ ul.social:after {
 }
 .centered:before,
 .centered:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -493,7 +493,7 @@ ul.social:after {
 }
 .signup:before,
 .signup:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -554,7 +554,7 @@ ul.social:after {
 }
 .container:before,
 .container:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -568,7 +568,7 @@ ul#tmbs {
   clear: both;
   padding: 0;
   list-style-type: none;
-  content: "";
+  content: '';
 }
 .grid-first,
 .grid1,
@@ -628,7 +628,7 @@ ul#tmbs {
   -o-transition: all 0.3s ease-out;
   -ms-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=0)';
   filter: alpha(opacity=0);
   -webkit-opacity: 0;
   -moz-opacity: 0;
@@ -645,7 +645,7 @@ ul#tmbs {
 }
 .column a:hover .title {
   bottom: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+  -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=90)';
   filter: alpha(opacity=90);
   -webkit-opacity: 0.9;
   -moz-opacity: 0.9;
@@ -660,7 +660,7 @@ ul#tmbs {
 }
 .row:before,
 .row:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -720,7 +720,7 @@ hr {
 }
 .details-container:before,
 .details-container:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -733,7 +733,7 @@ hr {
 }
 .details .title:before,
 .details .title:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -752,7 +752,7 @@ hr {
 }
 .details .title ul:before,
 .details .title ul:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -793,7 +793,7 @@ ul.tags {
 }
 ul.tags:before,
 ul.tags:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -813,7 +813,7 @@ ul.palette {
 }
 ul.palette:before,
 ul.palette:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -1211,7 +1211,7 @@ td.print-price {
   }
   ul.social:before,
   ul.social:after {
-    content: " ";
+    content: ' ';
     /* 1 */
     display: table;
     /* 2 */
@@ -1361,7 +1361,7 @@ Side note: I know that this style of nesting in SASS doesn't result in the most 
 .column-labels:after,
 .product:after,
 .totals-item:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -1441,7 +1441,7 @@ label {
 }
 .shopping-cart:before,
 .shopping-cart:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
@@ -1510,7 +1510,7 @@ label {
 }
 .totals:before,
 .totals:after {
-  content: " ";
+  content: ' ';
   /* 1 */
   display: table;
   /* 2 */
